--- a/ex001/ex01iframe.html
+++ b/ex001/ex01iframe.html
@@ -16,6 +16,7 @@
     <!--Agora a forma utilizando um iframe (quadro/moldura inline)-->
     <p>Acessando o site do 
         <iframe src="https://www.cursoemvideo.com/" frameborder="0"> 
+            <a href="https://www.cursoemvideo.com/" target="_blank"></a>
             <!--frameborder é a linha de borda-->
             <!--Será criada uma janela dentro do site.-->
         </iframe>
@@ -27,7 +28,19 @@
     <p>Aparecerá essa mensagem de erro, pois alguns sites não permitem 
         o uso do iframe para proteger o seu conteúdo.</p>
     <p>Dessa forma, o uso do iframe não será útil em algumas situações.</p>
+    <br>
 
+    <h2>Configurando o iframe</h2>
+
+    <p>O repositório do Guanabara 
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0"
+        height="500" width="500"> <!--As alterações no CSS são soberanas sobre essas!-->
+        <!-- Também há o comando scrolling que configura a barra de rolagem da tela-->
+            <a href="https://gustavoguanabara.github.io"></a>
+        </iframe>
+
+        também é legal. 
+    </p>
 
 
 
