--- a/ex002/pagina002.html
+++ b/ex002/pagina002.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de teste</title>
+    <title>Página 002</title>
 
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-color: gray;
+            background-color: lightcoral;
             color: white;
         }
 
@@ -17,7 +17,8 @@
     </style>
 </head>
 <body>
-    <h1>Página 001 - Teste</h1>
+    <h1>Página 002 - Teste</h1>
+
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
         Sint sit nisi, alias tempore ducimus delectus fuga placeat quisquam 
         eius dolore libero corporis distinctio et reprehenderit.
