iframes mais seguros

--- a/ex002/ex003.html
+++ b/ex002/ex003.html
@@ -36,7 +36,9 @@
         eius dolore libero corporis distinctio et reprehenderit.
         Tenetur earum dolorum nulla? Facere.</p>
     
-    <iframe src="" id="tela" name="frame"> <!--Esse name serve para identificar a janela no link acima-->
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima.</h1>"> <!--Esse name serve para identificar a janela no link acima-->
+        <!--O srcdoc serve para colocar algo dentro do frame selecionado.-->
+        
         <p>Infelizmente o seu navegador não é compatível com isso!</p>
     </iframe>
 
